<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView 
		android:id="@+id/tasks_title"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/tasks"
	    />
	<TextView 
		android:id="@+id/location_text"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    />
	<ListView
		android:id="@id/android:list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/tasks_title"
		android:layout_above="@id/add_button"/>
	<TextView
		android:id="@id/android:empty"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/no_tasks"
		android:gravity="center_vertical|center_horizontal"
		android:layout_below="@id/tasks_title"
		android:layout_above="@+id/add_button" />
	<Button
		android:id="@id/add_button"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:text="@string/plus_sign"/>
	<Button
		android:id="@+id/remove_button"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:layout_toRightOf="@id/add_button"
 		android:text="@string/remove_completed_tasks"/>
	<ToggleButton
		android:id="@+id/show_local_tasks_toggle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:layout_toRightOf="@id/remove_button"/>
	<TextView
		android:id="@+id/show_local_tasks_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="2dip" 
		android:lines="2"
		android:text="@string/show_local"
		android:gravity="top"
 		android:layout_toRightOf="@id/show_local_tasks_toggle"
 		android:layout_alignTop="@id/show_local_tasks_toggle"
 		android:layout_alignParentBottom="true"/>
</RelativeLayout>
